--- a/components/rooms/RoomsPage.module.scss
+++ b/components/rooms/RoomsPage.module.scss
@@ -4,7 +4,7 @@
 
 // Main container
 .container {
-	@apply flex-1 max-w-6xl mx-auto p-6 space-y-6;
+	@apply flex-1 w-9/12 p-6;
 }
 
 // Page header section
